2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve effeciency and precision, in approximate mode, of diff()
	* Proper interval arithmetic for airy() with arguments >= -1

2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not use angle unit in Si() and Ci()
	* Convert trigonometric arguments to selected angle unit
	* Hide current angle unit from result in qalc
	* Fix equations with inverse trigonometric functions when default angle unit is none
	* Never show ending zeroes for roman numerals
	* More flexible im() and re()

2019-03-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculation of Si(), Ci(), Shi(), and Chi()
	* Integration of sinc()
	* sinc(x)*x=sin(x)
	* Use sinc() for derivative of Si()

2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix atomic unit of velocity
	* Improve findMatchingUnit()

2019-03-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix limits.h inclusion (fixes compilation errors)

2019-03-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "factorized result is wrong" because of non-simplified value in logical and calculation

2019-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix make check (add test.cc and defs2doc.cc to POTFILES.in and add data files to POTFILES.skip)

2019-03-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix rational power interval in some cases
	* Improve gcd() with non-integer coefficients
	* Fix segfault when rounding some intervals

2019-03-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix heuristic gcd
	* Fix limit((6x^3) ∕ (7x − 2x^2 − 5),infinity) and similar

2019-03-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix square of complex interval

2019-03-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix show ending zeroes for rational numbers
	* Avoid multiplication of very long polynomials (fixed)

2019-03-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ignore locale option (CLI)